# hello-world-app

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  requirements-dev.txt
.github/workflows/: ci.yml
app/: main.py
scripts/: build_and_push.sh  lint.sh  test.sh  update_environment.sh
tests/: test_main.py
