[project]
name = "hello-world-app"
version = "0.1.0"
description = "Cloud Run Job: writes hello_world.txt to a GCS bucket"
requires-python = ">=3.12"

[tool.ruff]
line-length = 110
target-version = "py312"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
